---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: ??.02.2024
  Features:
    - Now show 'Ores produced' in victory screen.
  Changes:
    - Change table style to more closely match vanilla (#3 by _CodeGreen)
  Compatibility:
    - Added soft compatibility with Satisfactorio.
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 31.01.2024
  Changes:
    - Statistics with tooltips now show the tooltip-info icon similar to vanilla.
    - Change formatting from Title Case to normal capitilization to more closely mimic vanilla.
  Compatibility:
    - Statistic entries can now define a custom statistic name to be displayed.
    - Statistic entries can now define a custom statistic tooltip to be displayed.
    - Statistic entries now need to explicitly define the existance of a tooltip.
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 28.01.2024
  Compatibility:
    - Better compatibility with mods that add custom train stops.
  Changes:
    - Slightly change area formatting when the number is small.
    - Do not count trains on editor surfaces.
    - The command /show-victory-screen is now a start-up setting. Disabled by default.
    - (Internal) Harden gathering statistics from other mods even more.
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 15.01.2024
  Compatibility:
    - Mods can now force the victory, even if it has been reached before.
    - Mods can now specify a custom victory message. This message can optionally be different for winners and losers.
    - Added soft compatibility for some specific mods. This allows you to add Better Victory Screen
      to playthroughs to track your statistics. However, until full compatibility is added by the other 