@@ -7,6 +7,7 @@ Date: ??.02.2024
     - Change table style to more closely match vanilla (#3 by _CodeGreen)
   Compatibility:
     - Added soft compatibility with Satisfactorio.
+    - Now compatible with the mod Ballistic Missile.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.10
 Date: 31.01.2024
